--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+blinker==1.7.0
+click==8.1.7
+colorama==0.4.6
 contourpy==1.1.1
 cycler==0.12.1
+Flask==3.0.2
 fonttools==4.48.1
+importlib-metadata==7.0.1
 importlib-resources==6.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.3
 kiwisolver==1.4.5
+MarkupSafe==2.1.5
 matplotlib==3.7.4
 numpy==1.24.4
 packaging==23.2
@@ -16,4 +24,5 @@ seaborn==0.13.2
 six==1.16.0
 tenacity==8.2.3
 tzdata==2023.4
+Werkzeug==3.0.1
 zipp==3.17.0
