--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Change directory to terraform-deployment
+        run: cd terraform-deployment
+
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v1
         with:
