--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Change directory to terraform-deployment
-        run: cd terraform-deployment
+        run: cd terraform_practice/terraform-deployment
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v1
