--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,8 +14,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Print current directory
+        run: pwd
+
       - name: Change directory to terraform-deployment
-        run: cd terraform_practice/terraform-deployment
+        run: cd terraform-deployment
+
+      - name: Print current directory
+        run: pwd
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v1
