--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,13 +9,13 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./terraform-deployment
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v1
+      - name: Setup and run tests
+        working-directory: ./terraform-deployment
+        run: |
+          cp .env .env
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v1
