--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,18 +1,20 @@
 name: Terraform Deployment
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./terraform-deployment
 
     steps:
-      - uses: actions/checkout@v2
       - name: Setup and run tests
+        uses: actions/checkout@v2
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v1
@@ -21,8 +23,6 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: ./terraform-deployment
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
-        working-directory: ./terraform-deployment
