--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,9 +1,10 @@
 name: Terraform Deployment
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["main.yml"]
+    types:
+      - completed
 
 jobs:
   deploy:
