--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,3 +27,19 @@ jobs:
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
+
+  cleanup:
+    needs: deploy
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./terraform-deployment
+
+    steps:
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.7.3
+
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve
