--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -12,6 +12,8 @@ jobs:
     defaults:
       run:
         working-directory: ./terraform-deployment
+    env:
+      ACTIONS_STEP_DEBUG: true
 
     steps:
     - name: Checkout repository
@@ -31,5 +33,5 @@ jobs:
     - name: Apply Terraform
       run: terraform apply -auto-approve
       env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
