--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -12,12 +12,15 @@ jobs:
     defaults:
       run:
         working-directory: ./terraform-deployment
-    env:
-      ACTIONS_STEP_DEBUG: true
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+
+    - name: Set AWS credentials
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
@@ -32,6 +35,3 @@ jobs:
 
     - name: Apply Terraform
       run: terraform apply -auto-approve
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
