--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -17,10 +17,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set AWS credentials
+    - name: Set AWS credentials and run Terraform
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        # Set AWS credentials as environment variables
+        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+        export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
